data/derived/sp14/progs/unify/prog1082.ml.out
Characters 89-90:
  let e = build (g,depth) in
                 ^
Error: This expression has type int * int -> int
       but an expression was expected of type int -> int -> int
       Type int * int is not compatible with type int 
